trying to fix the alignments with 100vh

--- a/index.css
+++ b/index.css
@@ -41,8 +41,7 @@ body {
 #chatbot {
     position: absolute;
     bottom: 0;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100vh;
     background-color: green;
     height: 90vh;
 }
